--- a/style.css
+++ b/style.css
@@ -1,9 +1,53 @@
+.large-header {
+    position: relative;
+    width: 100%;
+    background: #111;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+    z-index: 1;
+}
+
+.demo .large-header {
+    background-image: url("http://hddesktopwallpapers.in/wp-content/uploads/2015/08/ocean-background-wallpaper.jpg");
+}
+
+.main-title {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    color: black;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate3d(-50%, -50%, 0);
+    transform: translate3d(-50%, -50%, 0);
+}
+
+.demo .main-title {
+    text-transform: uppercase;
+    font-size: 4.8em;
+    letter-spacing: 0.1em;
+}
+
+.main-title .thin {
+    font-weight: 300;
+}
+
+@media only screen and (max-width: 768px) {
+    .demo .main-title {
+        font-size: 3em;
+    }
+}
+
 body {
     align-content: center;
+    background: rgb(24, 24, 24);
 }
 
 .button-container {
     margin: 0px auto;
+    text-align: center;
 }
 
 .gif-container {
@@ -36,10 +80,11 @@ img {
 }
 
 .form2 {
-    margin: 10px 0px 0px 15px;
+    margin: 15px 0px 0px 15px;
 }
 
 .rating {
-    width: 25%;
+    width: 30%;
     margin: 10px auto;
+    color: white;
 }
