--- a/style.css
+++ b/style.css
@@ -50,6 +50,16 @@ body {
     text-align: center;
 }
 
+.big-display {
+    margin: 0 auto;
+    width: 80%
+}
+
+#top-button {
+    margin: 0 auto;
+    width: 100%
+}
+
 .gif-container {
     margin: 10px auto;
     width: 80%
@@ -87,6 +97,9 @@ img {
     width: 30%;
     margin: 10px auto;
     color: white;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
 }
 
 .new-button {
