--- a/style.css
+++ b/style.css
@@ -117,8 +117,7 @@ img {
         width: 10%;
         display: block;
     }
-    #top-button {
-        height: 50px;
-        width: 50px;
+    .big-display {
+        margin: 0 0 0 25px;
     }
 }
